# UntilitedMathLibrary

./: BoronMathLibrary.cpp  BoronMathLibrary.h  CMakeLists.txt  README.md
BoronMath/: BoronMath.h  Variables.h
BoronMath/GPU/Functions/: LoadGPUInt.h  StoreGPUComponent.h  TransformGPUNormal.h
BoronMath/GPU/GPUInt3/: GPUInt3.h
BoronMath/GPU/GPUMatrix4x4/: GPUMatrix4x4.h
BoronMath/GPU/GPUVector2/: GPUVector2.h
BoronMath/GPU/GPUVector3/: GPUVector3.h
BoronMath/GPU/GPUVector4/: GPUVector4.h
BoronMath/SIMD/Color255/: Color255.h
BoronMath/SIMD/Functions/: LoadInt.h  LoadVector.h  Matrix4x4Functions.h  StoreComponent.h  TransformNormal.h  TransformVector.h  Utils.h  Vector4Functions.h
BoronMath/SIMD/Int2/: Int2.h
BoronMath/SIMD/Int3/: Int3.h
BoronMath/SIMD/Matrix4x4/: Matrix4x4.h
BoronMath/SIMD/Vector2/: Vector2.h
BoronMath/SIMD/Vector3/: Vector3.h
BoronMath/SIMD/Vector4/: Vector4.h
UntilitedMath/Functions/: LoadVector.h  Matrix4x4Functions.h  TransformVector.h
UntilitedMath/SIMD/Color255/: Color255.h
UntilitedMath/SIMD/Matrix4x4/: Matrix4x4.h
